--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:largeHeap="true"
-        android:icon="@drawable/logo_elis"
+        android:icon="@drawable/plan"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_elis"
         android:supportsRtl="true"
